# BackEnd/src/api-doc.json
@@ -300,6 +300,9 @@
                       },
                       "views": {
                         "type": "integer"
+                      },
+                      "image": {
+                        "type": "string"
                       }
                     }
                   }
@@ -311,7 +314,8 @@
                   "title": "Star Wars",
                   "description": "Princess Leia is captured and held hostage by the evil Imperial forces in their effort to take over the galactic Empire. Venturesome Luke Skywalker and dashing captain Han Solo team together with the loveable robot duo R2-D2 and C-3PO to rescue the beautiful princess and restore peace and justice in the Empire.",
                   "types": "AdventureActionScience Fiction",
-                  "views": 0
+                  "views": 0,
+                  "image": "https://image.tmdb.org/t/p/w500/6FfCtAuVAW8XJjZ7eWeLibRLWTw.jpg"
                 }
               }
             }
